--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "DotA 2 Match Ticker",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "manifest_version": 2,
   "description": "Competitive coverage on the go!",
   "icons": {
@@ -9,8 +9,8 @@
 		"128": "icon128.png"
   },
   "browser_action": {
-    "default_icon": "icon128dev.png",
-	"default_popup": "index_gc_151.html"
+    "default_icon": "icon128.png",
+	"default_popup": "index_gc_152.html"
   },
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "permissions": [
