--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "DotA 2 Match Ticker",
-  "version": "1.5.2",
+  "version": "1.6.1",
   "manifest_version": 2,
-  "description": "Competitive coverage on the go!",
+  "description": "DotA 2 competitive coverage on the go!",
   "icons": {
 		"16": "icon16.png",
 		"48": "icon48.png",
@@ -10,7 +10,7 @@
   },
   "browser_action": {
     "default_icon": "icon128.png",
-	"default_popup": "index_gc_152.html"
+	"default_popup": "index_gc_161.html"
   },
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "permissions": [
