--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "DotA 2 Match Ticker",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "manifest_version": 2,
   "description": "DotA 2 competitive coverage on the go!",
   "icons": {
@@ -10,7 +10,7 @@
   },
   "browser_action": {
     "default_icon": "icon128.png",
-	"default_popup": "index_gc_163.html"
+	"default_popup": "index_gc.html"
   },
   "permissions": [
     "http://api.dotaprj.me/"
