--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,9 @@
+RewriteEngine on
+
+RewriteCond %{HTTP_HOST} api.dotaprj.me$
+RewriteCond %{REQUEST_URI} !^/api
+RewriteRule ^(.*)$ /api/$1 [L]
+
 # Apache Server Configs v2.14.0 | MIT License
 # https://github.com/h5bp/server-configs-apache
 
@@ -982,8 +988,3 @@ FileETag None
 #     RewriteCond %{REQUEST_FILENAME} !-f
 #     RewriteRule ^(.+)\.(\d+)\.(bmp|css|cur|gif|ico|jpe?g|js|png|svgz?|webp|webmanifest)$ $1.$3 [L]
 # </IfModule>
-
-
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^api.dotaprj.me
-RewriteRule ^(.*)$ http://dotaprj.me/api/$1 [L,NC,QSA]
