--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,8 +1,4 @@
-RewriteEngine on
 
-RewriteCond %{HTTP_HOST} api.dotaprj.me$
-RewriteCond %{REQUEST_URI} !^/api
-RewriteRule ^(.*)$ /api/$1 [L]
 
 # Apache Server Configs v2.14.0 | MIT License
 # https://github.com/h5bp/server-configs-apache
@@ -382,6 +378,13 @@ AddDefaultCharset utf-8
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 # Option 1: rewrite www.example.com → example.com
+
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{HTTP_HOST} ^api\.(.+)$ [NC]
+    RewriteRule ^ %{ENV:PROTO}://dotaprj.me/api%{REQUEST_URI} [R=301,L]
+</IfModule>
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
